# apytypes

./: .buildinfo  .clang-format  .clangd-gen.py  .codecov.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CNAME  LICENSE.txt  README.md  apytypes_stubgen.sh  changelog.html  comparison.html  development.html  genindex.html  index.html  licenses.html  meson.build  meson.options  objects.inv  performance.html  playground.html  publications.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  stubgen.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: RELEASE_ISSUE_TEMPLATE.md
.github/workflows/: benchmark.yml  benchmark_push.yml  codeql.yml  coverage.yml  documentation.yml  documentation.yml-no-run  publish-test-pypi.yml  publish-test-pypi.yml-no-run  release-build-wasm-wheels.yml  release-publish-to-pypi.yml  run_coverage.yml  run_coverage.yml-no-run  stub-and-doctests.yml  test-clash.yml  tests-32-bits.yml  tests-cocotb.yml  tests-debug-memcheck.yml  tests-icc.yml  tests-min-deps.yml  tests-risc-v.yml  tests-ub-sanitizers.yml  tests.yml  wasm.yml
_downloads/00bb7b14234d2c6c8b993ab12be990af/: vectorrotation.ipynb
_downloads/29afb8c0b3d6dbd148dabdf577534ab2/: numpy_integration.py
_downloads/2cae3500da720d045fddba63b9a7af26/: apyfixed.ipynb
_downloads/2dda482b521af00739685cad5c275e5f/: approximate_multiplication.ipynb
_downloads/38c996a6e10eef723812a0593b84d3f5/: ldlt_matrix_inversion.py
_downloads/4cfac77f9d94b4d258ee368487d4b60c/: reciprocal_lookup.ipynb
_downloads/656ff8fdc9c11b8126642095c275e217/: numpy.py
_downloads/6a6b52f9442e6dcb6a9fdb827b5de3fc/: test_fp8_mul.py
_downloads/6c8a751a95e4cbae2803e2f5a14ede13/: numpy_integration.ipynb
_downloads/79d012df581a4f7a4816db0696661272/: vectorrotation.py
_downloads/7e48bd51740fa18add8cba332fa2984d/: ode_solver.py
_downloads/8a14ac5a6ba78ffa6971f587ef60ac9f/: ldlt_matrix_inversion.ipynb
_downloads/8a429ec5e1733ca1ea245f8ce72232ca/: reciprocal_lookup.py
_downloads/95cd391970f13461ba86e0fd415cb9b3/: test_fp8_mul.ipynb
_downloads/b39b61d5b5c6115fa2e71346cf84e8d4/: numpy.ipynb
_downloads/d17aab42b6fd9a26adc96c3bdc6bba7e/: apyfloat.ipynb
_downloads/e4dfd9716732211876c7f347d3e08d3d/: ode_solver.ipynb
_downloads/f1a4ba3da811368f61679e80670cc307/: apyfixed.py
_sources/: comparison.rst.txt  development.rst.txt  index.rst.txt  licenses.rst.txt  performance.rst.txt  publications.rst.txt  sg_execution_times.rst.txt
_sources/api/: apycfixed.rst.txt  apycfixedarray.rst.txt  apycfloat.rst.txt  apyfixed.rst.txt  apyfixedarray.rst.txt  apyfloat.rst.txt  apyfloatarray.rst.txt  arrayfunctions.rst.txt  context.rst.txt  index.rst.txt  quantizationoverflow.rst.txt  third-party.rst.txt  utils.rst.txt
_sources/cpp_api/: apybuffer.rst.txt  apycfixed_util.rst.txt  apyfixedarray.rst.txt  apyfloat.rst.txt  apyfloatarray.rst.txt  apytypes_common.rst.txt  apytypes_mp.rst.txt  apytypes_scratch_vector.rst.txt  array_utils.rst.txt  broadcast.rst.txt  index.rst.txt
_sources/examples/: approximate_multiplication.rst.txt  apyfixed.rst.txt  apyfloat.rst.txt  index.rst.txt  ldlt_matrix_inversion.rst.txt  numpy.rst.txt  numpy_integration.rst.txt  ode_solver.rst.txt  reciprocal_lookup.rst.txt  sg_execution_times.rst.txt  test_fp8_mul.rst.txt  vectorrotation.rst.txt
api/: apycfixed.html  apycfixedarray.html  apycfloat.html  apycfloatarray.html  apyfixed.html  apyfixedarray.html  apyfloat.html  apyfloatarray.html  arrayfunctions.html  codegeneration.html  context.html  index.html  quantizationoverflow.html  third-party.html  threading.html  utils.html
benchmark/: bench_numfi.py  bench_spfpm.py  benchmark.py  ci_cfixed_array_benchmarks.py  ci_cfixed_scalar_benchmarks.py  ci_cfloat_array_benchmarks.py  ci_cfloat_scalar_benchmarks.py  ci_fixed_array_benchmarks.py  ci_fixed_scalar_benchmarks.py  ci_float_array_benchmarks.py  ci_float_scalar_benchmarks.py
comparison/: compare_apytypes.py  compare_en_cl_fix.py  compare_fixedpoint.py  compare_fpbinary.py  compare_fxpmath.py  compare_numfi.py  compare_spfpm.py  comparison.py
cpp_api/: apybuffer.html  apycfixed.html  apycfixed_util.html  apycfixedarray.html  apyfixed.html  apyfixed_util.html  apyfixedarray.html  apyfloat.html  apyfloat_util.html  apyfloatarray.html  apytypes_common.html  apytypes_mp.html  apytypes_scratch_vector.html  apytypes_simd.html  apytypes_util.html  array_utils.html  broadcast.html  ieee754.html  index.html  python_util.html
dev/bench/: data.js
docs/: Doxyfile  Makefile  comparison.rst  conf.py  development.rst  index.rst  interactive-console.html  licenses.rst  performance.rst  playground.rst  publications.rst
docs/_plots/: innerproductscale.py  numpyscale.py  (+5 more)
examples/: README.rst  approximate_multiplication.html  approximate_multiplication.py  apyfixed.html  apyfixed.py  apyfloat.html  apyfloat.py  fp8_multiplier.vhdl  index.html  ldlt_matrix_inversion.html  numpy.html  numpy.py  numpy_integration.html  numpy_integration.py  ode_solver.html  ode_solver.py  reciprocal_lookup.html  reciprocal_lookup.py  sg_execution_times.html  test_fp8_mul.html  test_fp8_mul.py  vectorrotation.html  vectorrotation.py
src/: .clang-format  .clangd  .clangd-gen.py  .gitignore  Makefile  apy_common.cc  apy_common.h  apy_dynamic_stack_allocator.h  apy_fixed.cc  apy_fixed.h  apy_fixed_wrapper.cc  apy_float.cc  apy_float.h  apy_float_context_wrapper.cc  apy_float_contextmanager.cc  apy_float_contextmanager.h  apy_float_wrapper.cc  apy_int.cc  apy_int.h  apy_types_wrapper.cc  apy_util.h  apyarray.h  apybuffer.h  apycfixed.cc  apycfixed.h  apycfixed_util.h  apycfixed_wrapper.cc  apycfixedarray.cc  apycfixedarray.h  apycfixedarray_iterator.cc  apycfixedarray_iterator.h  apycfixedarray_wrapper.cc  apycfloat.cc  apycfloat.h  apycfloat_util.h  apycfloat_wrapper.cc  apycfloatarray.cc  apycfloatarray.h  apycfloatarray_iterator.cc  apycfloatarray_iterator.h  (+52 more)
subprojects/: bshoshany-thread-pool.wrap  highway.wrap  nanobind.wrap
test_apy_types/: pytest.ini  test_contextmanagers.py  test_fixed_point.py  test_floating_point.py
(+178 files in other folders)
