[project]
name = "apytypes"
dynamic = ['version']
authors = [
    { name = "Oscar Gustafsson", email = "oscar.gustafsson@gmail.com" },
    { name = "Mikael Henriksson", email = "mikael.henriksson@liu.se" },
    { name = "Theodor Lindberg", email = "theodor.lindberg@liu.se" },
]
description = "Python package for custom fixed-point and floating-point formats"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/apytypes/apytypes/"
Issues = "https://github.com/apytypes/apytypes/issues"
Documentation = "https://apytypes.github.io/apytypes/"

[project.optional-dependencies]
docs = [
    "breathe",
    "furo",
    "matplotlib",
    "numpydoc",
    "sphinx",
    "sphinx_copybutton",
    "sphinx_gallery",
]
test = ["numpy", "pytest"]
dev = ["pybind11-stubgen", "nanobind"]
benchmark = ["numpy", "pytest", "pytest-benchmark"]
comparison = [
    "fpbinary",
    "fixedpoint",
    "fxpmath",
    "spfpm",
    "numfi",
    "numpy",
    "matplotlib",
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'setuptools_scm>=7']

[tool.meson-python.args]
install = ['--skip-subprojects']

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
write_to = "lib/apytypes/_version.py"
parentdir_prefix_version = "apytypes-"
fallback_version = "0.0+UNKNOWN"

[tool.pytest.ini_options]
markers = [
    "float_neg : custom marker for grouping tests for floating-point negation",
    "float_add : custom marker for grouping tests for floating-point addition",
    "float_sub : custom marker for grouping tests for floating-point subtraction",
    "float_mul : custom marker for grouping tests for floating-point multiplication",
    "float_div : custom marker for grouping tests for floating-point division",
    "float_pow : custom marker for grouping tests for floating-point power function",
    "float_comp : custom marker for grouping tests for floating-point comparisons",
    "float_special : custom marker for grouping tests for floating-point special values",
    "float_array : custom marker for grouping tests for floating-point arrays",
    "slow : custom marker for grouping long running tests",
]

[tool.typos]
files.extend-exclude = ["extern", "docs/Doxyfile"]
default.extend-words = { NDArray = "NDArray" }
default.extend-identifiers = { NDArray = "NDArray" }

[tool.cibuildwheel]
skip = [
    "pp*",      # APyTypes currently can not be build for PyPy ...
    "*-win32",  # ... nor can it be build for 32-bit Windows systems
]
